--- a/RRepResPRoj2.Rmd
+++ b/RRepResPRoj2.Rmd
@@ -12,15 +12,13 @@ Analyzing the NOAA Storm Database, we conclude that in the Unied States, torando
 This study uses the R software package to analyze the NOAA Storm Database.  The code blocks below documents all the R code generating the statistics and results.
 
 ### Libraries needed
-```{r libs, message = FALSE, results=FALSE}
+```{r libs, message = FALSE, results=FALSE, warning=FALSE}
 library(dplyr)
 library(ggplot2)
 ```
 
 ### Loading data
 ```{r loadNOrg, cache=TRUE, message = FALSE}
-
-#loading data
 stormStat <- read.csv("repdata-data-StormData.csv.bz2")
 ```
 Note that this process takes many minutes to complete, since the NOAA Storm Database is quite large.
@@ -28,7 +26,7 @@ Note that this process takes many minutes to complete, since the NOAA Storm Data
 ### Statistics Generation
 The following code block parses the costs of property damage, and crop damage, and combines them into the economic damage.  The sum of fatalities, injuries, and economic damage, and the frequency are also generated for each event.
 ```{r dataProc}
-#interpret the prop and crop damage exponents
+#interpret the prop and crop damage exponents with the base
 ltrexp <- c("", " ", "-", "?", "+", "0", "1", "2", "3", "4", 
 	"5", "6", "7", "8", "B", "h", "H", "k", "K", "m", "M")
 num10pwr <- c(0, 0, 0, 0, 0, 0, 1, 2, 3, 4,
@@ -37,13 +35,12 @@ stormStat$PROPDMGTTL <- stormStat$PROPDMG * 10^( num10pwr[match(stormStat$PROPDM
 stormStat$CROPDMGTTL <- stormStat$CROPDMG * 10^( num10pwr[match(stormStat$CROPDMGEXP, ltrexp)] )
 
 #combining deaths with injuries, and property with crop damages
-stormStat$humanHarm <- stormStat$FATALITIES * 50 + stormStat$INJURIES
 stormStat$econDmg <- stormStat$PROPDMGTTL + stormStat$CROPDMGTTL
 
 #generate the stats
 stormStatSum <- stormStat %>% group_by(EVTYPE) %>% 
     summarize(frequency=n(), fatalities=sum(FATALITIES), injuries=sum(INJURIES), 
-              humanHarm=sum(humanHarm), propDmg=sum(PROPDMGTTL), cropDmg=sum(CROPDMGTTL),
+              propDmg=sum(PROPDMGTTL), cropDmg=sum(CROPDMGTTL),
               econDmg=sum(econDmg));
 stormStatSumByFatal <- stormStatSum[order(-stormStatSum$fatalities), ]
 ```
@@ -51,6 +48,7 @@ stormStatSumByFatal <- stormStatSum[order(-stormStatSum$fatalities), ]
 ## Results
 ### Fatalities
 The code below generates a bar chart of the top 10 events that cause the most fatalities in the United States.  Note that torandos, excessive heat, and flash floods cause the most deaths in the United States.
+
 ```{r fatalStats}
 stormStatSumByFatalIdx <- order(-stormStatSum$fatalities)
 top10fatal <- head(stormStatSum[stormStatSumByFatalIdx, c("EVTYPE", "frequency", "fatalities")], n=10)
